--- a/backend/src/main/webapp/app/views/notification/main.html
+++ b/backend/src/main/webapp/app/views/notification/main.html
@@ -7,88 +7,117 @@
 	
     <div class="row">
         <div class="col-xs-12">
-				<div class="row">
-					<div class="col-xs-7">
-						<div class="panel panel-primary">
-							<div class="panel-heading">
-								<i class="fa fa-bell fa-fw"></i> Notifications Panel
-								<div class="pull-right" style="position: relative; bottom: 5px; right: -10px;">
-									<div class="btn-group">
-										<button type="button" class="btn btn-default btn-sm btn-outline active">นัดชำระ<span class="badge pull-right" style="background-color: #a03b42; color: white;">1</span></button>
-										<button type="button" class="btn btn-default btn-sm btn-outline">นัด Call<span class="badge pull-right" style="background-color: #a03b42; color: white;">1</span></button>
-										<button type="button" class="btn btn-default btn-sm btn-outline">ทั่วไป<span class="badge pull-right" style="background-color: #a03b42; color: white;">1</span></button>
-									</div>
-									&nbsp;
-									<div class="btn-group pull-right">
-									    <button type="button" class="btn btn-default btn-sm btn-outline dropdown-toggle active" data-toggle="dropdown">
-									      	ทั้งหมด&nbsp;<span class="caret"></span>
-									    </button>
-									    <ul class="dropdown-menu">
-									      	<li><a href=""><i class="fa fa-adjust"></i> ทั้งหมด</a></li>
-									      	<li><a href=""><i class="fa fa-check-circle-o"></i> ดูแล้ว</a></li>
-									      	<li><a href=""><i class="fa fa-circle-o"></i> ยังไม่ได้ดู</a></li>
-									    </ul>
-								  	</div>
+			<div class="row">
+				<div class="col-xs-8">
+					<div class="panel panel-primary">
+						<div class="panel-heading">
+							<i class="fa fa-bell fa-fw"></i> Notifications Panel
+							<div class="pull-right" style="position: relative; bottom: 5px; right: -10px;">
+								<div class="btn-group">
+									<button type="button" class="btn btn-default btn-sm btn-outline active">นัดชำระ<span class="badge pull-right" style="background-color: #a03b42; color: white;">1</span></button>
+									<button type="button" class="btn btn-default btn-sm btn-outline">นัด Call<span class="badge pull-right" style="background-color: #a03b42; color: white;">1</span></button>
+									<button type="button" class="btn btn-default btn-sm btn-outline">ทั่วไป<span class="badge pull-right" style="background-color: #a03b42; color: white;">1</span></button>
 								</div>
+								&nbsp;
+								<div class="btn-group pull-right">
+								    <button type="button" class="btn btn-default btn-sm btn-outline dropdown-toggle active" data-toggle="dropdown">
+								      	ทั้งหมด&nbsp;<span class="caret"></span>
+								    </button>
+								    <ul class="dropdown-menu">
+								      	<li><a href=""><i class="fa fa-adjust"></i> ทั้งหมด</a></li>
+								      	<li><a href=""><i class="fa fa-circle-o"></i> ยังไม่ได้ดู</a></li>
+								      	<li><a href=""><i class="fa fa-check-circle-o"></i> ดูแล้ว</a></li>
+								    </ul>
+							  	</div>
 							</div>
-							<!-- /.panel-heading -->
-							<div class="panel-body" style="padding: 3px;">
-								<div class="row">
-									<div class="col-xs-12">
-										<div class="list-group" style="margin-bottom: 0;">
-											<div class="list-group-item" style="padding-top: 0; padding-bottom: 0;">
-												<div class="row">
-													<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;">
-														<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
-															{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{ numPages | number:0 }} ({{'pagination.total' | translate}} {{ totalItems | number:0 }} {{'pagination.items' | translate}})
-														</span>
-														<pagination ng-change="pageChanged()" total-items="totalItems"
-																	first-text="{{'pagination.first' | translate}}"
-																	previous-text="{{'pagination.previous' | translate}}"
-																	next-text="{{'pagination.next' | translate}}"
-																	last-text="{{'pagination.last' | translate}}"
-																	ng-model="formData.currentPage" items-per-page="formData.itemsPerPage"
-																	max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
-																	rotate="false" num-pages="numPages" style="margin: auto;" />
-														<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #337AB7;">
-															<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="formData.itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
-														</span>
-													</div>
+						</div>
+						<!-- /.panel-heading -->
+						<div class="panel-body" style="padding: 3px;">
+							<div class="row">
+								<div class="col-xs-12">
+									<div class="list-group" style="margin-bottom: 0;">
+										<div class="list-group-item" style="padding-top: 0; padding-bottom: 0;">
+											<div class="row">
+												<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;">
+													<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
+														{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{ numPages | number:0 }} ({{'pagination.total' | translate}} {{ totalItems | number:0 }} {{'pagination.items' | translate}})
+													</span>
+													<pagination ng-change="pageChanged()" total-items="totalItems"
+																first-text="{{'pagination.first' | translate}}"
+																previous-text="{{'pagination.previous' | translate}}"
+																next-text="{{'pagination.next' | translate}}"
+																last-text="{{'pagination.last' | translate}}"
+																ng-model="formData.currentPage" items-per-page="formData.itemsPerPage"
+																max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
+																rotate="false" num-pages="numPages" style="margin: auto;" />
+													<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #337AB7;">
+														<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="formData.itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
+													</span>
 												</div>
 											</div>
-											<span class="list-group-item" ng-repeat="data in notificationList track by $index" ng-style="data.isTakeAction ? {color: '#b7b3ae'} : {'font-weight': 700}" style="padding-left: 0; padding-top: 10px; padding-bottom: 3px;">
-												<span style="display: inline-block; width: 40px; text-align: right;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}.</span>&nbsp;&nbsp;&nbsp;	
-												<span class="checkbox_animate">
-													<label>
-										            	<input type="checkbox" value="" ng-model="data.isTakeAction" ng-change="">
-										            	<span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-										            	{{ data.name }}
-										          	</label>
-										        </span>
-										        <span class="pull-right">
-													<i class="fa fa-eye fa-lg" style="cursor: pointer;"></i> 
-										        </span>
-												<span class="pull-right text-muted small">
-													<em>{{ data.dateTimeDesc }}</em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-												</span>
-											</span>
 										</div>
+										<span class="list-group-item" ng-repeat="data in notificationList track by $index" ng-style="data.isTakeAction ? {color: '#b7b3ae'} : {'font-weight': 700}" style="padding-left: 0; padding-top: 10px; padding-bottom: 3px;">
+											<span style="display: inline-block; width: 40px; text-align: right;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}.</span>&nbsp;&nbsp;&nbsp;	
+											<span class="checkbox_animate">
+												<label>
+									            	<input type="checkbox" value="" ng-model="data.isTakeAction" ng-change="">
+									            	<span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+									            	{{ data.name }}
+									          	</label>
+									        </span>
+									        <span class="pull-right">
+												<i class="fa fa-eye fa-lg" style="cursor: pointer;"></i> 
+									        </span>
+											<span class="pull-right text-muted small">
+												<em>{{ data.dateTimeDesc }}</em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+											</span>
+										</span>
 									</div>
 								</div>
 							</div>
-							<!-- /.panel-body -->
-							<div class="panel-footer" style="padding-top: 5px; padding-bottom: 5px;">
-	                            <!-- <div class="row">
-									<div class="btn-group pull-right" style="margin-right: 5px;">
-										<button type="button" class="btn btn-primary btn-sm btn-outline">รอ take action</button>
-										<button type="button" class="btn btn-primary btn-sm btn-outline">take action แล้ว</button>
+						</div>
+						<!-- /.panel-body -->
+						<div class="panel-footer" style="padding-top: 5px; padding-bottom: 5px;">
+                            <!-- <div class="row">
+								<div class="btn-group pull-right" style="margin-right: 5px;">
+									<button type="button" class="btn btn-primary btn-sm btn-outline">รอ take action</button>
+									<button type="button" class="btn btn-primary btn-sm btn-outline">take action แล้ว</button>
+								</div>
+							</div> -->
+                        </div>
+					</div>
+				</div>
+				<!-- /.col-lg-4 -->
+				
+				
+				<div class="col-xs-4">
+						<div class="panel panel-primary">
+							<div class="panel-heading">
+								<i class="fa fa-bell fa-fw"></i> Create Notifications Panel
+							</div>
+							<!-- /.panel-heading -->
+							<div class="panel-body">
+								
+								<form>
+									<div class="form-group">
+									    <label>หัวข้อการแจ้งเตือน</label>
+									    <input type="text" class="form-control">
 									</div>
-								</div> -->
-	                        </div>
+									<div class="form-group">
+									    <label>รายละเอียดการแจ้งเตือน</label>
+										<textarea class="form-control" rows="5"></textarea>
+									</div>
+									<button type="submit" class="btn btn-primary pull-right">บันทึก</button>
+								</form>
+								
+							</div>
+							<!-- /.panel-body -->
+							<div class="panel-footer" style="padding-top: 5px; padding-bottom: 5px;"></div>
 						</div>
 					</div>
-					<!-- /.col-lg-4 -->
-				</div>            
+				
+				
+			</div>            
         </div>
     </div>
 </div>
