--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -223,81 +223,83 @@
 	 <div class="modal fade" id="myModal_ask" tabindex="-1" role="dialog" style="cursor: move;">
 	     <div class="modal-dialog">
 	     	<form name="saveAskModalForm" ng-submit="askModalObj.askModalSave()" novalidate>
-	         <div class="modal-content">
-	         	<div class="modal-header">
-	                <button type="button" class="close" ng-click="dismissModalAsk()" aria-hidden="true">&times;</button>
-	                <h4 class="modal-title">บันทึกผลการติดตาม</h4>
-	            </div>
-	            <div class="modal-body" style="min-height: 419px;">
-					<div class="panel panel-default" style="margin-bottom: 0; margin-top: 0;">
-					  <div class="panel-body">
-					  
-						
-						  <div class="row">
-							  <div class="form-group col-xs-8" ng-class="{'has-error':saveAskModalForm.resultText.$invalid}">
-							    <label class="control-label">ผลการติดตาม</label>
-							    <label class="control-label pull-right">{{ askModalObj.init.maxlength == -1 ? askModalObj.init.currentlength : askModalObj.init.currentlength + '/' + askModalObj.init.maxlength }}</label>
-						  		<textarea name="resultText" maxlength="{{ askModalObj.init.maxlength }}" class="form-control" style="resize: none;" rows="3" ng-model="askModalObj.trace.resultText" required></textarea>
+		     	<fieldset ng-disabled="askModalObj.isSaving" style="border: 0; border-radius: 0; padding: 0;">
+		         <div class="modal-content">
+		         	<div class="modal-header">
+		                <button type="button" class="close" ng-click="dismissModalAsk()" aria-hidden="true">&times;</button>
+		                <h4 class="modal-title">บันทึกผลการติดตาม</h4>
+		            </div>
+		            <div class="modal-body" style="min-height: 419px;">
+						<div class="panel panel-default" style="margin-bottom: 0; margin-top: 0;">
+						  <div class="panel-body">
+						  
+							
+							  <div class="row">
+								  <div class="form-group col-xs-8" ng-class="{'has-error':saveAskModalForm.resultText.$invalid}">
+								    <label class="control-label">ผลการติดตาม</label>
+								    <label class="control-label pull-right">{{ askModalObj.init.maxlength == -1 ? askModalObj.init.currentlength : askModalObj.init.currentlength + '/' + askModalObj.init.maxlength }}</label>
+							  		<textarea name="resultText" maxlength="{{ askModalObj.init.maxlength }}" class="form-control" style="resize: none;" rows="3" ng-model="askModalObj.trace.resultText" required></textarea>
+								  </div>
+								  
+								  <div class="form-group col-xs-4">
+									<label class="control-label">เบอร์โทร</label>
+									<input name="userNameShow" class="form-control" ng-model="askModalObj.trace.tel">
+								  </div>
 							  </div>
 							  
-							  <div class="form-group col-xs-4">
-								<label class="control-label">เบอร์โทร</label>
-								<input name="userNameShow" class="form-control" ng-model="askModalObj.trace.tel">
-							  </div>
-						  </div>
-						  
-						  <div class="row">
-							  <div class="col-xs-6">
-								<div class="form-group">
-									<label class="control-label">วันนัดชำระ | ยอดนัดชำระ</label>
-									<div class="input-group">
-					                    <input ng-model-options="{ updateOn: 'blur' }" name="appointDate" type='text' class="form-control input-sm dtPicker" style="width: 130px; font-size: 0.9em;" 
-					                    	   ng-model="askModalObj.trace.appointDate" date-parser="dd/MM/yyyy HH:mm" />
-									  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-					                    <input type="number" class="form-control input-sm" ng-model="askModalObj.trace.appointAmount" ng-disabled="!askModalObj.trace.appointDate" />
-									</div>						
-								</div>
-							  </div>
-							  <div class="col-xs-6">					  
-								<div class="form-group">
-									<label class="control-label">วันนัด Call</label>
-								    <div class="input-group">
-					                    <input name="nextTimeDate" type='text' class="form-control input-sm dtPicker" style="font-size: 0.9em;" 
-					                    	   ng-model="askModalObj.trace.nextTimeDate" date-parser="dd/MM/yyyy HH:mm" />
-									  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+							  <div class="row">
+								  <div class="col-xs-6">
+									<div class="form-group">
+										<label class="control-label">วันนัดชำระ | ยอดนัดชำระ</label>
+										<div class="input-group">
+						                    <input ng-model-options="{ updateOn: 'blur' }" name="appointDate" type='text' class="form-control input-sm dtPicker" style="width: 130px; font-size: 0.9em;" 
+						                    	   ng-model="askModalObj.trace.appointDate" date-parser="dd/MM/yyyy HH:mm" />
+										  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+						                    <input type="number" class="form-control input-sm" ng-model="askModalObj.trace.appointAmount" ng-disabled="!askModalObj.trace.appointDate" />
+										</div>						
 									</div>
-								</div>
-							  </div>
-							  <div class="col-xs-12">
-								  <div class="row">
-									  <div class="col-xs-6" ng-repeat="list in dymList">
-									  	<div class="form-group">
-											<label class="control-label">{{ list.name }}</label>
-											<div class="input-group input-group-sm">
-												<div class="input-group-btn" ng-show="list.dymListDetGroup.length > 0">
-													<select style="height: 30px; width: 25px;" name="dymList_{{ $index }}" class="input-group-addon" ng-model="list.groupSelected" ng-options="option as option.name for option in list.dymListDetGroup" ng-change="changeGroup(list)"></select>
+								  </div>
+								  <div class="col-xs-6">					  
+									<div class="form-group">
+										<label class="control-label">วันนัด Call</label>
+									    <div class="input-group">
+						                    <input name="nextTimeDate" type='text' class="form-control input-sm dtPicker" style="font-size: 0.9em;" 
+						                    	   ng-model="askModalObj.trace.nextTimeDate" date-parser="dd/MM/yyyy HH:mm" />
+										  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+										</div>
+									</div>
+								  </div>
+								  <div class="col-xs-12">
+									  <div class="row">
+										  <div class="col-xs-6" ng-repeat="list in dymList">
+										  	<div class="form-group">
+												<label class="control-label">{{ list.name }}</label>
+												<div class="input-group input-group-sm">
+													<div class="input-group-btn" ng-show="list.dymListDetGroup.length > 0">
+														<select style="height: 30px; width: 25px;" name="dymList_{{ $index }}" class="input-group-addon" ng-model="list.groupSelected" ng-options="option as option.name for option in list.dymListDetGroup" ng-change="changeGroup(list)"></select>
+											  		</div>
+													<span class="input-group-addon" ng-show="list.dymListDetGroup.length == 0"><i class="fa fa-sticky-note"></i></span>
+													<select name="dymList_{{ $index }}" class="form-control" ng-model="list.dymListVal" ng-options="option._id as (option.code ?  option.meaning + ' [' + option.code + ']' : option.meaning) for option in list.dymListDet">
+														<option value="">--Select--</option>
+											  		</select>
 										  		</div>
-												<span class="input-group-addon" ng-show="list.dymListDetGroup.length == 0"><i class="fa fa-sticky-note"></i></span>
-												<select name="dymList_{{ $index }}" class="form-control" ng-model="list.dymListVal" ng-options="option._id as (option.code ?  option.meaning + ' [' + option.code + ']' : option.meaning) for option in list.dymListDet">
-													<option value="">--Select--</option>
-										  		</select>
-									  		</div>
+											  </div>
 										  </div>
-									  </div>
-								  </div>  
+									  </div>  
+								  </div>
 							  </div>
 						  </div>
-					  </div>
+						</div>
+		            </div>
+		           	<div class="modal-footer">
+		           		<button type="button" class="btn btn-warning pull-left" ng-click="keepData()">ปิด โดยไม่ล้างข้อมูล</button>
+						<button type="button" class="btn btn-default" ng-click="dismissModalAsk()">ปิด</button>
+						<button type="button" class="btn btn-success" ng-disabled="!askModalObj.trace.resultText || isOutOfWorkingTime" 
+								ng-show="!askModalObj.trace['_id'] && askModalObj.trace.appointDate && askModalObj.trace.appointAmount" ng-click="askModalObj.askModalSave(true)">{{ askModalObj.isSaving ? 'กำลังบันทึก...' : 'บันทึก &amp; ประมาณการ' }}</button>
+						<button type="submit" class="btn btn-primary" ng-disabled="!askModalObj.trace.resultText || isOutOfWorkingTime">{{ askModalObj.isSaving ? 'กำลังบันทึก...' : 'บันทึก' }}</button>
 					</div>
-	            </div>
-	           	<div class="modal-footer">
-	           		<button type="button" class="btn btn-warning pull-left" ng-click="keepData()">ปิด โดยไม่ล้างข้อมูล</button>
-					<button type="button" class="btn btn-default" ng-click="dismissModalAsk()">ปิด</button>
-					<button type="button" class="btn btn-success" ng-disabled="!askModalObj.trace.resultText || isOutOfWorkingTime" 
-							ng-show="!askModalObj.trace['_id'] && askModalObj.trace.appointDate && askModalObj.trace.appointAmount" ng-click="askModalObj.askModalSave(true)">บันทึก &amp; ประมาณการ</button>
-					<button type="submit" class="btn btn-primary" ng-disabled="!askModalObj.trace.resultText || isOutOfWorkingTime">บันทึก</button>
-				</div>
-	         </div>
+		         </div>
+		         </fieldset>
 	         </form>
 	     </div>
 	 </div>
