--- a/backend/src/main/webapp/app/views/import_others/import_others_conf.html
+++ b/backend/src/main/webapp/app/views/import_others/import_others_conf.html
@@ -20,7 +20,7 @@
 
 					
 					<div ui-view>
-						<div class="col-md-12">
+						<div style="position: absolute; top: 3px; right: 18px; z-index: 100000;">
 							<code ng-show="isOver">จำนวน field เกินกำหนด [Limited 30 fields]</code>
 							<div class="form-inline">
 								<button type="button" class="btn btn-info pull-right" style="margin-bottom: 5px;" ng-show="containers[0].length > 0" ng-click="detailDisplayConf()">ตั้งค่าหน้าแสดงข้อมูล</button>
@@ -62,18 +62,18 @@
 								                    <input class="pull-left" title="เลขที่สัญญา" name="contractNo" type="radio" ng-model="$parent.$parent.$parent.contractNoColumnName" ng-change="updateColumnName('contactNo')" ng-value="item.columnName">
 								                    <input class="pull-left" title="เลขบัตรประชาชน" name="idCardNo" type="radio" ng-model="$parent.$parent.$parent.idCardNoColumnName" ng-change="updateColumnName('idCard')" ng-value="item.columnName">
 								                    <i class="fa fa-bars" style="cursor: pointer;" title="เลือกแบบฟอร์ม Notice" ng-show="item.isNotice" ng-click="noticeList(item)"></i>
-								                    <br />
 								                    
-								                    <a href="#" e-class="form-control input-sm" title="Data Type" e-placeholder="Data Type" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
+								                    <div class="clearfix"></div>
+								                    <a href="#" e-class="form-control input-sm" title="Data Type" e-placeholder="Data Type" style="color: white;" e-style="width: 146px; font-size: 10px;" buttons="no" onaftersave="update()"
 			                       					   editable-text="item.dataType"><small>{{ item.dataType }}</small></a><br />
 								                    
-								                    <a href="#" e-class="form-control input-sm" title="Column Name" e-placeholder="Column Name" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
+								                    <a href="#" e-class="form-control input-sm" title="Column Name" e-placeholder="Column Name" style="color: white;" e-style="width: 146px; font-size: 10px;" buttons="no" onaftersave="update()"
 								                       editable-text="item.columnName"><small>{{ item.columnName }}</small></a><br />
 								                       
-								                    <a href="#" e-class="form-control input-sm" title="Alias Name" e-placeholder="Alias Name" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
+								                    <a href="#" e-class="form-control input-sm" title="Alias Name" e-placeholder="Alias Name" style="color: white;" e-style="width: 146px; font-size: 10px;" buttons="no" onaftersave="update()"
 								                       editable-text="item.columnNameAlias"><small>{{ item.columnNameAlias || '-' }}</small></a><br />
 			                       
-													<a href="#" ng-show="item.isNotice" e-class="form-control input-sm" title="Colum Name ที่ออก notice" e-placeholder="Colum Name ที่ออก notice" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
+													<a href="#" ng-show="item.isNotice" e-class="form-control input-sm" title="Colum Name ที่ออก notice" e-placeholder="Colum Name ที่ออก notice" style="color: white;" e-style="width: 146px; font-size: 10px;" buttons="no" onaftersave="update()"
 								                       editable-text="item.noticeCusColName"><small>{{ item.noticeCusColName || '-' }}</small></a><br />
 								                       
 								                    <i class="fa fa-tag" title="Backgroup Color" colorpicker colorpicker-position="top" style="cursor: pointer; color: {{item.colorBg}};" ng-model="item.colorBg"></i>   
