--- a/backend/src/main/webapp/app/views/import_others/import_others_detail_conf.html
+++ b/backend/src/main/webapp/app/views/import_others/import_others_detail_conf.html
@@ -1,5 +1,5 @@
 
-<div class="col-md-12">
+<div style="position: absolute; top: 3px; right: 55px">
 	<div class="form-inline" style="text-align: center;">
 		<form ng-submit="addContainer()">
 			<div class="form-group input-group">
