--- a/backend/src/main/webapp/app/views/notice_xdoc/main.html
+++ b/backend/src/main/webapp/app/views/notice_xdoc/main.html
@@ -1,21 +1,28 @@
+<style>
+.editable-wrap {
+    width: 100%;
+}
+.editable-controls {
+    width: 100%;
+}
+</style>
+
+
 <div class="row">
 	<div class="col-md-12">
-		<h1 class="page-header">นำเข้าแบบฟอร์ม Notice (XDoc)</h1>
+		<h1 class="page-header">
+			นำเข้าแบบฟอร์ม Notice (XDoc)
+		</h1>
 	</div>
 </div>
 
 <div class="panel panel-primary">
-	<div class="panel-heading">
-		<i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการนำเข้า
-		<!-- <div class="btn-group pull-right" ng-show="group0">
-			<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-				<i class="fa fa-chevron-down"></i>
-			</button>
-			<ul class="dropdown-menu slidedown">
-				<li ng-repeat="u in products"><a href="" ng-click="changeProduct(u)">{{ u.productName }}</a></li>
-			</ul>			
-		</div>
-		<span class="pull-right" ng-show="group0">{{ workingOnProduct.productName }}&nbsp&nbsp</span> -->
+	<div class="panel-heading" style="position: relative;">
+		<i class="fa fa-list-alt  fa-fw"></i> {{ isMore ? title: 'แสดงข้อมูลการนำเข้า' }}
+		
+		<button type="button" class="btn btn-info btn-circle" style="position: absolute; right: 3px; top: 4px;" ng-click="goBack()" ng-show="isMore">
+        	<i class="fa fa-long-arrow-left"></i>
+        </button>
 	</div>
 	<div class="panel-body" style="padding: 3px;">
 
@@ -125,37 +132,54 @@
 			<table class="table table-striped table-hover" style="margin: 0;">
 				<thead>
 					<tr style="color: #337AB7;">
-						<th width="5%">#</th>
+						<th width="2%" ng-hide="isMore">#</th>
 						<th width="40%">ชื่อไฟล์</th>
-						<th width="15%">ชื่อแบบฟอร์ม</th>
+						<th width="15%" ng-hide="isMore">ชื่อแบบฟอร์ม</th>
 						<th width="15%">วันที่นำเข้า</th>
-						<th width="10%">Date Input</th>
-						<th width="15%"></th>
+						<!-- <th width="10%" ng-hide="isMore">Date Input</th> -->
+						<th width="15%" ng-hide="isMore"></th>
 					</tr>
 				<thead>
 				<tbody>
 					<tr ng-repeat="data in datas track by $index" style="color: #337AB7;">
-						<td>{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
+						<td ng-hide="isMore">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 						<td>{{ data.fileName }}</td>
-						<td>
+						<td ng-hide="isMore">
 							<a href="#" e-class="form-control" buttons="no" onaftersave="updateTemplateName(data)" editable-text="data.templateName" edit-disabled="!group0"> 
 								{{ data.templateName || 'empty'}} 
 							</a>
 						</td>
 						<td>{{ data.createdDateTime | date:gb_dateTimeFormat }}</td>
-						<td>
+						<!-- <td ng-hide="isMore">
 							<i class="fa fa-lg user-action-icon-primary" ng-class="{'fa-check-circle': data.isDateInput, 'fa-circle': !data.isDateInput}" ng-click="updateDateInput(data)" ng-show="group0"></i>
-						</td>
-						<td>
-							<i title="ลบ" class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.id)" ng-show="group0"></i>&emsp; 
-							<i title="สถานะ" class="fa fa-lg" ng-class="{'fa-check-circle': data.enabled, 'fa-minus-circle': !data.enabled, 'user-action-icon-primary': data.enabled, 'user-action-icon-danger': !data.enabled}" ng-click="updateEnabled(data)"></i>&emsp; 
-							<i title="download" class="fa fa-download fa-lg user-action-icon-primary" ng-click="download(data.id)" ng-show="group0"></i>
+						</td> -->
+						<td ng-hide="isMore">
+							<i title="ลบ" class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.id)" ng-show="group0">&nbsp;&nbsp;</i> 
+							<i title="สถานะ" class="fa fa-lg" ng-class="{'fa-check-circle': data.enabled, 'fa-minus-circle': !data.enabled, 'user-action-icon-primary': data.enabled, 'user-action-icon-danger': !data.enabled}" ng-click="updateEnabled(data)">&nbsp;&nbsp;</i> 
+							<i title="download" class="fa fa-download fa-lg user-action-icon-primary" ng-click="download(data.id)" ng-show="group0">&nbsp;&nbsp;</i>
+							<i title="more" class="fa fa-arrow-circle-right fa-lg user-action-icon-primary" ng-click="more(data)" ng-show="group0"></i>
 						</td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
-
+		
+		<div class="row" style="margin-top: 15px;" ng-show="isMore">
+            <div class="col-md-12">
+                <div class="panel panel-info" style="margin-bottom: 0; background-color: #f2f2f2;">
+                    <div class="panel-body">
+						<div class="form-group">
+							<label>Fields</label>
+							<a href="#" e-class="form-control" e-placeholder="Set Fields"
+							e-style="width: 100%;" buttons="no" onaftersave="updateMore('fields')" editable-textarea="moreData.fields">
+							<small>{{ moreData.fields || 'Set Fields' }}</small>
+							</a>
+						</div>						
+                    </div>
+                </div>
+            </div>
+         </div>
+		
 	</div>
 	<div class="panel-footer"></div>
 </div>
