--- a/backend/src/main/webapp/app/styles/main.css
+++ b/backend/src/main/webapp/app/styles/main.css
@@ -1,6 +1,20 @@
 /* Space out content a bit */
+@font-face {
+    font-family: 'cs-chatthai';
+    src: url('/backend/app/font/CSChatThaiUI.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'FrankRuhlLibre';
+    src: url('/backend/app/font/FrankRuhlLibre-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     padding-bottom: 20px;
+    font-family: 'FrankRuhlLibre','cs-chatthai';
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
