--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -108,12 +108,27 @@
 				                
 					                <div class="form-group input-group">
 										<span class="input-group-addon">ชื่อผู้ซื้อ</span>
-								      	<select class="form-control" style="width: 180px;" ng-model="formData.orderName" ng-options="option for option in orderNameLst" ng-change="changeOrderName()">
+								      	<select class="form-control" ng-model="formData.orderName" ng-options="option for option in orderNameLst" ng-change="changeOrderName()">
 								  	  		<option value="">--ทั้งหมด--</option>
 								  	  	</select>
+							  	  		<div class="input-group-addon">
+							  	  			<span>ยอดซื้อรวม : </span>
+							  	  			<span style="font-weight: 700; text-decoration: underline;">{{ totalPriceSumAll | number:2 }}</span>
+							  	  		</div>
+								  	  	<select class="form-control" ng-model="formData.discount" ng-change="changePercent()">
+								  	  		<option value="10">10%</option>
+								  	  		<option value="15">15%</option>
+								  	  		<option value="20">20%</option>
+								  	  	</select>
+								  	  	<div class="input-group-addon">
+							  	  			<span>หลังส่วนลด : </span>
+							  	  			<span style="font-weight: 700; text-decoration: underline;">{{ (totalPriceSumAll - ((formData.discount/100) * totalPriceSumAll)) | number:2 }}</span>
+							  	  		</div>
 								    </div>
 				                	
-				                	<br />
+				                	<div style="margin-bottom: 5px;">
+				                		<i class="fa fa-file-pdf-o fa-2x pull-right" style="cursor: pointer; color: #337ab7;" title="Export" ng-click="exportOrder()"></i>
+				                	</div>
 				                	
 									<ul class="nav nav-tabs">
 					                     <li ng-class="{'active': tabActived == 1}" ng-click="changeTab(1)"><a href="" data-toggle="tab">3 ตัวบน</a>
@@ -125,6 +140,8 @@
 					                     <li ng-class="{'active': tabActived == 4}" ng-click="changeTab(4)"><a href="" data-toggle="tab">ลอย</a>
 					                     </li>
 					                     <li ng-class="{'active': tabActived == 5}" ng-click="changeTab(5)"><a href="" data-toggle="tab">โต๊ด</a>
+					                     </li>
+					                     <li ng-class="{'active': tabActived == 6}" ng-click="changeTab(6)"><a href="" data-toggle="tab">เช็คผล</a>
 					                     </li>
 					                 </ul>
 									
@@ -147,6 +164,10 @@
 															<td>{{ ord._id }}</td>
 															<td>{{ ord.totalPrice | number:2}}</td>
 															<td>{{ ord.count | number:0 }}</td>
+														</tr>
+														<tr>
+															<td colspan="2" style="text-align: center; font-weight: 700; text-decoration: underline;">รวม</td>
+															<td colspan="2" style="font-weight: 700;">{{ totalPriceSum | number:2 }}</td>
 														</tr>
 													</tbody>
 												</table>
@@ -171,6 +192,10 @@
 															<td>{{ ord.totalPrice | number:2}}</td>
 															<td>{{ ord.count | number:0 }}</td>
 														</tr>
+														<tr>
+															<td colspan="2" style="text-align: center; font-weight: 700; text-decoration: underline;">รวม</td>
+															<td colspan="2" style="font-weight: 700;">{{ totalPriceSum | number:2 }}</td>
+														</tr>
 													</tbody>
 												</table>
 					                         </div>
@@ -193,6 +218,10 @@
 															<td>{{ ord._id }}</td>
 															<td>{{ ord.totalPrice | number:2}}</td>
 															<td>{{ ord.count | number:0 }}</td>
+														</tr>
+														<tr>
+															<td colspan="2" style="text-align: center; font-weight: 700; text-decoration: underline;">รวม</td>
+															<td colspan="2" style="font-weight: 700;">{{ totalPriceSum | number:2 }}</td>
 														</tr>
 													</tbody>
 												</table>
@@ -217,6 +246,10 @@
 															<td>{{ ord.totalPrice | number:2}}</td>
 															<td>{{ ord.count | number:0 }}</td>
 														</tr>
+														<tr>
+															<td colspan="2" style="text-align: center; font-weight: 700; text-decoration: underline;">รวม</td>
+															<td colspan="2" style="font-weight: 700;">{{ totalPriceSum | number:2 }}</td>
+														</tr>
 													</tbody>
 												</table>
 					                         </div>
@@ -240,10 +273,31 @@
 															<td>{{ ord.totalPrice | number:2}}</td>
 															<td>{{ ord.count | number:0 }}</td>
 														</tr>
+														<tr>
+															<td colspan="2" style="text-align: center; font-weight: 700; text-decoration: underline;">รวม</td>
+															<td colspan="2" style="font-weight: 700;">{{ totalPriceSum | number:2 }}</td>
+														</tr>
 													</tbody>
 												</table>
 					                         </div>
 					                     </div>
+					                     
+					                     
+					                     
+					                     
+					                     
+					                     <div class="tab-pane fade" id="profile-pills" ng-class="{'active in': tabActived == 6}">
+					                         <div>
+						                         <br />
+						                         
+						                         Waiting
+					                         </div>
+					                     </div>
+					                     
+					                     
+					                     
+					                     
+					                     
 					                 </div>
 									
 									
